--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body {
   background-size: cover;
 */
   background: var(--bg-url) no-repeat top center/cover;
+  height: 100vh;
 }
 
 body * {
@@ -81,11 +82,15 @@ body * {
   left: 0;
   top: 50%;
   transform: translateY(-50%);
+  animation: slide-back 0.2s;
 }
 
 .light #switch button {
-  right: 0;
-  left: initial;
+  animation: slide-in 0.2s forwards;
+}
+
+#switch button:hover {
+  outline: 8px solid var(--hightlight-color)
 }
 
 #switch span {
@@ -155,4 +160,37 @@ footer {
   padding: 24px 0;
   text-align: center;
   font-size: 14px;
+}
+
+/* media queries */
+
+@media (min-widht: 700px) {
+  :root {
+    --bg-url: url(.assets/bg-desktop.jpg);
+  }
+
+    .light {
+      --bg-url: url(.assets/bg-desktop-light.jpg);
+    }
+  }
+
+/* media queries */
+
+@keyframes slide-in {
+  from {
+    left: 0;
+  }
+
+  to {
+    left: 50%;
+  }
+}
+
+@keyframes slide-back {
+  from {
+    left: 50%;
+  }
+  to {
+    left: 0;
+  }
 }
