--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ body * {
   width: 100%;
   max-width: 588px;
   margin: 56px auto 0px;
+  padding: 0 24px;
 }
 
 /* profile */
@@ -90,7 +91,7 @@ body * {
 }
 
 #switch button:hover {
-  outline: 8px solid var(--hightlight-color)
+  outline: 8px solid var(--hightlight-color);
 }
 
 #switch span {
@@ -164,15 +165,15 @@ footer {
 
 /* media queries */
 
-@media (min-widht: 700px) {
+@media (min-width: 700px) {
   :root {
     --bg-url: url(./assets/bg-desktop.jpg);
   }
 
-    .light {
-      --bg-url: url(./assets/bg-desktop-light.jpg);
-    }
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
   }
+}
 
 /* media queries */
 
