--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
   --stroke-color: rgba(255, 255, 255, 0.5);
   --surface-color: rgba(255, 255, 255, 0.05);
   --surface-color-hover: rgba(0, 0, 0, 0.02);
-  --hightlight-color: rgba(255, 255, 255, 0.2);
+  --highlight-color: rgba(255, 255, 255, 0.2);
   --switch-bg-url: url(./assets/moon-stars.svg);
 }
 
@@ -20,17 +20,11 @@
   --stroke-color: rgba(0, 0, 0, 0.5);
   --surface-color: rgba(0, 0, 0, 0.05);
   --surface-color-hover: rgba(0, 0, 0, 0.02);
-  --hightlight-color: rgba(0, 0, 0, 0.1);
+  --highlight-color: rgba(0, 0, 0, 0.1);
   --switch-bg-url: url(./assets/sun.svg);
 }
 
 body {
-  /* Atalho para todas essas propriedades!
-  background-image: url(./assets/bg-mobile.jpg);
-  background-repeat: no-repeat;
-  background-position: top center;
-  background-size: cover;
-*/
   background: var(--bg-url) no-repeat top center/cover;
   height: 100vh;
 }
@@ -48,7 +42,6 @@ body * {
 }
 
 /* profile */
-
 #profile {
   text-align: center;
   padding: 24px;
@@ -68,6 +61,7 @@ body * {
 #switch {
   position: relative;
   width: 64px;
+
   margin: 4px auto;
 }
 
@@ -77,11 +71,13 @@ body * {
   background: white var(--switch-bg-url) no-repeat center;
   border: 0;
   border-radius: 50%;
+
   position: absolute;
   top: 50%;
   left: 0;
   z-index: 1;
   transform: translateY(-50%);
+
   animation: slide-back 0.2s;
 }
 
@@ -90,7 +86,7 @@ body * {
 }
 
 #switch button:hover {
-  outline: 8px solid var(--hightlight-color);
+  outline: 8px solid var(--highlight-color);
 }
 
 #switch span {
@@ -105,12 +101,13 @@ body * {
 }
 
 /* links */
-
 ul {
   list-style: none;
+
   display: flex;
   flex-direction: column;
   gap: 16px;
+
   padding: 24px 0;
 }
 
@@ -118,28 +115,35 @@ ul li a {
   display: flex;
   align-items: center;
   justify-content: center;
+
   padding: 16px 24px;
+
   background: var(--surface-color);
   border: 1px solid var(--stroke-color);
   border-radius: 8px;
+
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
+
   text-decoration: none;
   font-weight: 500;
+
   transition: background 0.2s;
 }
 
+/* pseudo-selector */
 ul li a:hover {
   background: var(--surface-color-hover);
   border: 1.5px solid var(--text-color);
 }
 
-/* footer */
-
+/* social links */
 #social-links {
-  padding: 24px 0px;
   display: flex;
   justify-content: center;
+
+  padding: 24px 0;
+
   font-size: 24px;
 }
 
@@ -148,12 +152,13 @@ ul li a:hover {
   align-items: center;
   justify-content: center;
   padding: 16px;
+
   transition: background 0.2s;
   border-radius: 50%;
 }
 
 #social-links a:hover {
-  background: var(--hightlight-color);
+  background: var(--highlight-color);
 }
 
 footer {
@@ -163,7 +168,6 @@ footer {
 }
 
 /* media queries */
-
 @media (min-width: 700px) {
   :root {
     --bg-url: url(./assets/bg-desktop.jpg);
@@ -174,13 +178,11 @@ footer {
   }
 }
 
-/* media queries */
-
+/* animation */
 @keyframes slide-in {
   from {
     left: 0;
   }
-
   to {
     left: 50%;
   }
